fixed navbar hidden on devices with 'max-width: 80em'

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -347,7 +347,7 @@ table {
     font-size: 0.8em;
     top: 0pt;
     left: 0pt;
-    margin: 0pt;
+    margin: 50px 0pt 0pt 0pt;
     width: $sidebarwidthsmall;
     min-height: 100vh;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.19), 0px 3px 6px rgba(0, 0, 0, 0.23);
